--- a/src/main/resources/templates/animal-form.hbs
+++ b/src/main/resources/templates/animal-form.hbs
@@ -4,7 +4,7 @@
             <h1>Create Animal</h1>
             <hr>
 
-            {{#if endangeredAnimals}}
+            {{#if endangered}}
                 <div class="form-group">
                     <label for="type">Type</label><br>
                     <div class="form-check form-check-inline">
@@ -13,9 +13,9 @@
                         <label class="form-check-label" for="inlineRadio1">Normal</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="type" id="inlineRadio1" value="endangeredAnimals"
-                               onClick="window.location = '/create/animal/endangeredAnimals';" checked>
-                        <label class="form-check-label" for="inlineRadio2">EndangeredAnimals</label>
+                        <input class="form-check-input" type="radio" name="type" id="inlineRadio1" value="endangered"
+                               onClick="window.location = '/create/animal/endangered';" checked>
+                        <label class="form-check-label" for="inlineRadio2">Endangered</label>
 
                     </div>
                 </div>
@@ -64,9 +64,9 @@
                         <label class="form-check-label" for="inlineRadio1">Normal</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="type" id="inlineRadio1" value="endangeredAnimals"
-                               onClick="window.location = '/create/animal/endangeredAnimals';">
-                        <label class="form-check-label" for="inlineRadio2">EndangeredAnimals</label>
+                        <input class="form-check-input" type="radio" name="type" id="inlineRadio1" value="endangered"
+                               onClick="window.location = '/create/animal/endangered';">
+                        <label class="form-check-label" for="inlineRadio2">Endangered</label>
 
                     </div>
                 </div>
