--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -3,12 +3,12 @@
 <head>
     <title>{{#block "title"}}Wildlife Tracker{{/block}}</title>
 
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/app.css">
-    <script src="/js/jquery.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+{{!--     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'> --}}
+{{!--     <link rel="stylesheet" href="/css/bootstrap.css"> --}}
+{{!--     <link rel="stylesheet" href="/css/app.css"> --}}
+{{!--     <script src="/js/jquery.js"></script> --}}
+{{!--     <script src="/js/popper.min.js"></script> --}}
+{{!--     <script src="/js/bootstrap.min.js"></script> --}}
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
