--- a/src/main/resources/public/Css/style.css
+++ b/src/main/resources/public/Css/style.css
@@ -7,7 +7,7 @@
 font-family: 'Shippori Mincho', serif;
 }
 body{
-     background-image: url("/images/animal.jpg");
+     background-image: url("/images/ndovu.jpg");
      background-size:cover;
      color:blanchedalmond;
 
