--- a/src/main/resources/templates/animal-view.hbs
+++ b/src/main/resources/templates/animal-view.hbs
@@ -13,7 +13,7 @@
                 </div>
             {{/each}}
         {{else}}
-            <h2>No animals! Create some animals <a href="/create/animal">here</a></h2>
+            <h2>No animals! Create some animals <a href="/create/animal/new">here</a></h2>
         {{/if}}
 
     </div>
