--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,54 +1,127 @@
 <!DOCTYPE html>
+{{!--  <html> --}}
+{{!--  <head> --}}
+{{!--      <title>{{#block "title"}}Wildlife Tracker{{/block}}</title> --}}
+
+{{!--      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"> --}}
+{{!--      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> --}}
+{{!--      <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"> --}}
+{{!--      <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/css/mdb.min.css" rel="stylesheet"> --}}
+{{!--      <link rel="stylesheet" href="css/style.css --}}
+{{!--      " type="text/css"> --}}
+{{!--      {{#block "styles"}}{{/block}} --}}
+{{!--  </head> --}}
+{{!--  <body> --}}
+{{!--  <nav class=" navbar navbar-1 navbar-expand-lg navbar-dark "> --}}
+{{!--      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333" --}}
+{{!--              aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation"> --}}
+{{!--          <span class="navbar-toggler-icon"></span> --}}
+{{!--      </button> --}}
+{{!--      <div class="collapse navbar-collapse" id="navbarSupportedContent-333"> --}}
+{{!--          <h2 class="h-1">Wildlife Tracker</h2> --}}
+{{!--          <ul class="navbar-nav ml-auto nav-flex-icons "> --}}
+{{!--              <li  class="nav-item active"> --}}
+{{!--                  <a class="nav-link" href="/">Home --}}
+{{!--                      <span class="sr-only">(current)</span> --}}
+{{!--                  </a> --}}
+{{!--              </li> --}}
+{{!--              <li  class="nav-item"> --}}
+{{!--                  <a class="nav-link" href="/create/animal">Animals</a> --}}
+{{!--                     --}}
+{{!--              </li> --}}
+{{!--              <li  class="nav-item"> --}}
+{{!--                  <a class="nav-link" href="/create/sighting">Sightings</a> --}}
+
+{{!--              </li> --}}
+{{!--              <li  class="nav-item"> --}}
+{{!--                  <a class="nav-link" href="/create/ranger">Rangers</a> --}}
+{{!--                  <a  href="/view/rangers">view rangers</a> --}}
+{{!--              </li> --}}
+{{!--              <li  class="nav-item"> --}}
+{{!--                  <a class="nav-link" href="/create/location">Location</a> --}}
+{{!--              </li> --}}
+{{!--          </ul> --}}
+{{!--      </div> --}}
+{{!--  </nav> --}}
+
+{{!--  <div class="container"> --}}
+{{!--      <!--    begin main template--> --}}
+{{!--      <div class="page-header"> --}}
+{{!--          <h1 id="h1-1">Welcome to Wildlife Tracker.</h1> --}}
+{{!--      </div> --}}
+
+{{!--      <div class="col-md-12"> --}}
+{{!--          {{#block "content"}} --}}
+
+{{!--          {{/block}} --}}
+
+{{!--      </div> --}}
+{{!--  </div> --}}
+{{!--  <!--end main template--> --}}
+{{!--  {{#block "footer"}} --}}
+{{!--      <footer class="footer"> --}}
+{{!--          <div class="container"> --}}
+
+{{!--          </div> --}}
+{{!--      </footer> --}}
+{{!-- //      <script type="text/javascript" src="./js/jquery-3.4.0.min.js"></script> --}}
+{{!-- //      <script src="./js/mdb.min.js"></script> --}}
+{{!-- //      <script src="./js/bootstrap.min.js"></script> --}}
+{{!--      </body> --}}
+{{!--      </html> --}}
+{{!--  {{/block}} --}}
 <html>
 <head>
     <title>{{#block "title"}}Wildlife Tracker{{/block}}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 {{!-- //    <script src="https://unpkg.com/@popperjs/core@2"></script> --}}
 {{!-- //    <script src="/Js/jquery-3.6.0.js"></script> --}}
 {{!-- //    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.0/umd/popper.min.js" integrity="sha512-uxtUCZ+gIIpqJVZe/0IgmHq5yqW+2gzo3zsSqRXSlUBEM2IYxxnuyg7+i7j9SCv1R74/Zixdx0v8OiyShPWbkQ==" crossorigin="anonymous"></script> --}}
 {{!--     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'> --}}
 {{!--     <link rel="stylesheet" href="/css/bootstrap.css"> --}}
 {{!--     <link rel="stylesheet" href="/css/app.css"> --}}
-{{!--     <script src="/js/jquery.js"></script> --}}
-{{!--     <script src="/js/popper.min.js"></script> --}}
-{{!--     <script src="/js/bootstrap.min.js"></script> --}}
+{{!-- //     <script src="/js/jquery.js"></script> --}}
+{{!-- //     <script src="/js/popper.min.js"></script> --}}
+{{!-- //     <script src="/js/bootstrap.min.js"></script> --}}
 </head>
 <body>
-{{!--     <nav class="navbar navbar-expand-sm navbar-dark bg-dark"> --}}
 
-{{!--         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> --}}
-{{!--             <span class="navbar-toggler-icon"></span> --}}
-{{!--         </button> --}}
 
-        <div class="navbar">
+        <div class="container">
+        <h2>View your details</h2>
             <ul>
                 <li><a class="nav-link" href="/">Ranger</a></li>
-                  <a  href="/view/rangers">view your rangers</a>
-{{!--                  <li><a class="nav-link" href="/view/rangers">Ranger</a></li> --}}
-                    <li><a class="nav-link" href="/view/animals">Animal</a></li>
-                    <li><a class="nav-link" href="/view/locations">Location</a></li>
-                    <li><a class="nav-link" href="/view/sightings">Sighting</a></li>
+                  <a  href="/view/rangers"><button class="ranger-btn btns">view rangers</button></a>
+
+                  <li><a class="nav-link" href="/">Sighting</a></li>
+                  <a  href="/view/sightings"><button class="sighting-btn btns">view sightings</button></a>
+
+                 <li><a class="nav-link" href="/">Animal</a></li>
+                  <a  href="/view/animals"><button class="animal-btn btns">view animals</button></a>
+
+                   <li><a class="nav-link" href="/">Location</a></li>
+                  <a  href="/view/locations"><button class="location-btn btns">view locations</button></a>
+                  </ul>
+</div>
 
 
+<div class="container">
+<h2>Create your creations here</h2>
+<ul>
+          <ul>
+                        <li><a class="nav-link" href="/">Ranger</a></li>
+                          <a  href="/create/ranger"><button class="ranger-btn btns">create rangers</button></a>
 
-{{!--                 <li class="nav-item dropdown"> --}}
-{{!--                     <a class="nav-link dropdown-toggle" href="/" id="viewDropdown" role="button" --}}
-{{!--                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> --}}
-{{!--                         View --}}
-{{!--                     </a> --}}
-{{!--                     <div class="dropdown-menu" aria-labelledby="navbarDropdown"> --}}
-{{!--                         <a class="dropdown-item" href="/view/rangers">Ranger</a> --}}
-{{!--                         <a class="dropdown-item" href="/view/animals">Animal</a> --}}
-{{!--                         <a class="dropdown-item" href="/view/locations">Location</a> --}}
-{{!--                         <a class="dropdown-item" href="/view/sightings">Sighting</a> --}}
-{{!--                     </div> --}}
-{{!--                 </li> --}}
-{{!--                 <li class="nav-item dropdown"> --}}
-{{!--                     <a class="nav-link dropdown-toggle" href="/" id="createDropdown" role="button"> --}}
+                          <li><a class="nav-link" href="/">Sighting</a></li>
+                          <a  href="/create/sighting"><button class="sighting-btn btns">create sightings</button></a>
 
-{{!--                         Create --}}
-{{!--                     </a> --}}
+                         <li><a class="nav-link" href="/">Animal</a></li>
+                          <a  href="/create/animal"><button class="animal-btn btns">create animals</button></a>
+
+                           <li><a class="nav-link" href="/">Location</a></li>
+                          <a  href="/create/location"><button class="location-btn btns">create locations</button></a>
+                          </ul>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/create/ranger">Ranger</a>
                         <a class="dropdown-item" href="/create/animal">Animal</a>
@@ -58,7 +131,7 @@
                 </li>
             </ul>
         </div>
-    </nav>
+
 
     <!--begin main template-->
 
