--- a/src/main/resources/templates/ranger-form.hbs
+++ b/src/main/resources/templates/ranger-form.hbs
@@ -17,7 +17,7 @@
                        required>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-success btn-lg"> Create </button>
+                <a href="/view/rangers"><button type="submit" class="btn btn-success btn-lg"> Create </button></a>
             </div>
         </form>
     </div>
