--- a/src/main/resources/public/Css/style.css
+++ b/src/main/resources/public/Css/style.css
@@ -20,6 +20,12 @@ nav{
  font-family: 'Shippori Mincho', serif;
   background: rgb(8, 22, 8);
 }
+.nav_link{
+ font-size:1.8em;
+    margin-right:30px;
+
+
+}
 nav>ul li{
   display: inline-block;
   padding: 10px 30px;
