--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -29,8 +29,9 @@
 </header>
 
 </div>
-<div class="container"> --}}
+<div class="container">
  <h2>View your details</h2>
+ <nav class="nav_link">
             <ul>
                 <li><a class="nav-link" href="/view/rangers">Ranger</a></li>
 {{!--                   <a  href="/view/rangers"><button class="ranger-btn btns">view rangers</button></a> --}}
@@ -44,6 +45,7 @@
                    <li><a class="nav-link" href="/view/locations">Location</a></li>
 {{!--                   <a  href="/view/locations"><button class="location-btn btns">view locations</button></a> --}}
                   </ul>
+                  </nav>
 </div>
 
     <!--begin main template-->
