added some user interfaces styles

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -12,6 +12,8 @@
 
        <nav>
        <ul>
+          <li><a class="nav-link" href="/">Home</a></li>
+
   <h2>Create your creations here</h2>
    <li><a class="nav-link" href="/create/ranger">Ranger</a></li>
 {{!--                                  <a  href="/create/ranger"><button class="ranger-btn btns">create rangers</button></a> --}}
