--- a/src/main/resources/public/Css/style.css
+++ b/src/main/resources/public/Css/style.css
@@ -7,11 +7,15 @@
 font-family: 'Shippori Mincho', serif;
 }
 body{
-     background-image: url("/images/monkey.jpg");
+     background-image: url("/images/telope.jpg");
      background-size:cover;
-     color:blanchedalmond;
+     color:black;
 
 }
+p {
+text-align: center;
+font-family: 'Shippori Mincho', serif;
+font-size: 3em;
 
 nav{
   position: absolute;
@@ -20,9 +24,6 @@ nav{
  font-family: 'Shippori Mincho', serif;
   background: rgb(8, 22, 8);
 }
-.nav_link{
- font-size:1.8em;
-    margin-left:30px;
 
 
 }
