--- a/src/main/resources/public/Css/style.css
+++ b/src/main/resources/public/Css/style.css
@@ -9,7 +9,7 @@ font-family: 'Shippori Mincho', serif;
 body{
      background-image: url("/images/telope.jpg");
      background-size:cover;
-     color:black;
+     color:blue;
 
 }
 p {
@@ -28,13 +28,7 @@ nav{
 
 
 
-nav>ul li{
-  display: inline-block;
-  padding: 10px 30px;
-  font-size: 1em;
-  color: white;
-  cursor: pointer;
-}
+
 .btns{
   border: none;
   cursor: pointer;
